app/assets/stylesheets/barcelona/_proposals.scss
a.button.new-proposal{
  @include arrow-box();
  text-align: left;
}

.proposals-list{
  .proposal{
    background-color: $highlight;
    .proposal-content, .supports{
      padding: rem-calc(12) rem-calc(20);
      min-height: rem-calc(270);
      position: relative;
    }

    .bottom-bar{
      position: absolute;
      bottom: rem-calc(12);
      left: rem-calc(12);
    }

    position: relative;
    margin-bottom: rem-calc(20);

    .label-proposal{
      font-size: rem-calc(18);
      color: $text-medium;
      font-weight: normal;
    }

    h3{
      color: $brand;
      white-space: nowrap;
      text-overflow: ellipsis;
      overflow: hidden;

      &, a{
        font-weight: normal;
        font-size: rem-calc(22);
      }
    }

    .official-badge{
      $size: rem-calc(36);
      @include bcn-icon(ajuntament, $size);
      background-size: 70%;
      background-color: #fff;
      border-radius: $size/2;
      position: absolute;
      top: rem-calc(10);
      right: 0;
    }
  }

}

.submenu{
  @include grid-column($columns: 12, $last-column: true);
}

.featured-proposals{
  @media #{$small-only}{
    .featured-proposals-inner{
      @include grid-column($columns: 12, $last-column: true);
    }
  }

  @media #{$medium-only}{
    .featured-proposals-inner{
      @include grid-column($columns: 12, $last-column: true);
    }
  }

  .featured-proposal{
    text-align: center;
  }

  ul{
    list-style-type: none;
    margin: 0;
    padding: 0;

    li{
      margin-bottom: rem-calc(15);
      display: block;
    }

    @media #{$large-up} {
      li{
        margin-bottom: 0;
      }
      @include block-grid(3);
    }
  }

  .featured-proposal-inner{
    @include arrow-box(darken($highlight, 5%), bottom);
  }

  .featured-proposal-content{
    min-height: rem-calc(120px);
  }

}

.sidebar{
  .proposal-filter-menu{
    h2{
      position: relative;
    }

    .toggle-menu{
      position: absolute;
      top: 50%;
      right: rem-calc(15);
      @include transform(translateY(-50%));

      @media #{$medium-up} {
        display: none;
      }

      @extend .fa;
      @extend .fa-arrow-up;
    }

    &.collapsed{
      .sidebar-section-content{
        display: none;

        @media #{$medium-up}{
          display: block;
        }
      }

      .toggle-menu{
        @extend .fa-arrow-down;
      }
    }
  }

  .sidebar-section .title{
    @include arrow-box($highlight, left);
    font-size: rem-calc(18);
    font-weight: normal;
    line-height: rem-calc(18) * 1.5;
    margin-bottom: $line-height;
  }

  .sidebar-section-content{
    padding-left: rem-calc(22px);
  }

  h3{
    font-size: rem-calc(16);
    text-transform: uppercase;
  }

  .filter-group{
    padding-bottom: rem-calc(20px);
    border-bottom: 1px dashed $text-light;
    margin-bottom: rem-calc(20px);

    .field{
      position: relative;
      padding-left: rem-calc(24);
      margin-bottom: 0.5em;
      label{
        display: inline;
        margin: 0;
        padding: 0;
      }
      input{
        position: absolute;
        top: $base-line-height / 2 + rem-calc(2);
        margin: 0;
        padding: 0;
        @include transform(translateY(-50%));
        left: 0.2em;
      }

      a{
        margin-left: 0.2em;
      }
    }
  }
}

.proposal-meta{
  margin-top: $line-height / 2;
  a {
    @include label(
      $padding: rem-calc(10px),
      $bg: darken($highlight, 5%),
      $text-size: rem-calc(12),
      $radius: rem-calc(4)
    );
  }
}

.proposal-show{
  h2{
    font-weight: 300;
    a{
      color: $text;
    }
  }
  .proposal-description{
    margin-top: rem-calc(10);
    font-size: rem-calc(22);
    font-weight: 300;
  }
}


.proposals-list, .proposal-show{
  .vote-box{
    text-align: left;

    .total-supports{
      padding-bottom: rem-calc(15);
      border-bottom: 1px dotted $highlight;
      margin-bottom: rem-calc(15);
    }

    border: 5px solid $highlight;
    background-color: $background;

    .total-supports{
      padding: rem-calc(30) 0;
      text-align: center;
      color: $text-medium;
    }

    .supports-count{
      font-size: rem-calc(45);
      margin-bottom: rem-calc(10);
      color: $brand;
    }

    .button-support{
      margin-bottom: 0;
    }
  }
  
}

